# rust_cli

./: Cargo.toml
newsapi/: Cargo.toml
newsapi/src/: lib.rs
src/: main.rs  theme.rs
