workspace = { members = ["newsapi"] }
[package]
name = "clinews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "2.1.0"
crossterm = "0.27.0"
dotenv = "0.15.0"
newsapi = {path = "./newsapi"}
termimad = "0.29.4"
