workspace = { members = ["newsapi"] }
[package]
name = "clinews"
version = "0.1.0"
edition = "2021"

description = "A simple cli reader app"
license = "MIT"
authors = ["rockcoolsaint"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "2.1.0"
crossterm = "0.27.0"
dotenv = "0.15.0"
newsapi = {path = "./newsapi", features = ["async"]}
termimad = "0.29.4"
tokio = { version = "1.38.0", features = ["full"]}
# tokio-macros = "2.3.0"
