[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.9.7", features = ["json"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
thiserror = "1.0.61"
url = "2.5.2"
reqwest = { version = "0.12.5", features = ["json"], optional = true }

[features]
async = [
  "reqwest"
]
